--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 pillow
 scipy
-tensorflow>=2,<3
 tqdm>=4.41.0,<5
+torch==1.9.1; platform_system == "Darwin"
+torchvision==0.10.1; platform_system == "Darwin"
+torch==1.9.1+cpu; platform_system == "Linux"
+torchvision==0.10.1+cpu; platform_system == "Linux"
